2005-07-25  Sam Steingold  <sds@gnu.org>

	* tests.lisp (run-all-tests): disable bind-eval because of amd64 issues

2005-07-22  Sam Steingold  <sds@gnu.org>

	* path.tst: when "foo" is a file, (directory "foo/") must return NIL

2005-07-21  Sam Steingold  <sds@gnu.org>

	* encoding.tst: test SYS::GET-CHARSET-RANGE (was in src/subtypep.lisp)

2005-07-07  Sam Steingold  <sds@gnu.org>

	* setf.tst: check that GET-SETF-EXPANSION accepts NIL environment arg

2005-07-06  Sam Steingold  <sds@gnu.org>

	* bind.tst: use -X- and -F- instead of *X* and *F* to avoid
	conflict with globally special variables defined elsewhere

2005-06-28  Sam Steingold  <sds@gnu.org>

	* macro8.tst: test circular lists in code

2005-06-26  Sam Steingold  <sds@gnu.org>

	* macros8.tst: test (cond (t)) compilation

2005-06-22  Sam Steingold  <sds@gnu.org>

	* tests.lisp (run-test): print logfile's truename when there are errors

2005-06-22  Sam Steingold  <sds@gnu.org>

	* bind.tst: 6 more MACROLET tests inspired by ansi-tests

2005-06-22  Sam Steingold  <sds@gnu.org>

	* path.tst: check that the "SYS" logical host works

2005-06-09  Bruno Haible  <bruno@clisp.org>

	* conditions.tst: Mark a test as clisp-only.

2005-06-09  Bruno Haible  <bruno@clisp.org>

	* bin-io.tst: Update for cmucl-19b-pre1.
	* clos.tst: Likewise.
	* encoding.tst: Likewise.
	* eval20.tst: Likewise.
	* excepsit.tst: Likewise.
	* iofkts.tst: Likewise.
	* macro8.tst: Likewise.
	* path.tst: Likewise.
	* streams.tst: Likewise.
	* streamslong.tst: Likewise.
	* type.tst: Likewise.
	* weakptr.tst: Likewise.
	* tests.lisp (run-test, run-all-tests): Likewise.

2005-06-09  Bruno Haible  <bruno@clisp.org>

	Move lots of CLISP-only tests to a separate file.
	* conditions.tst: Move restart tests out to restarts.tst.
	* lists152.tst: Likewise.
	* restarts.tst: New file.
	* tests.lisp (run-all-tests): Run it after conditions.tst.

2005-06-08  Sam Steingold  <sds@gnu.org>

	* bind.tst: 5 more tests
