@@ -1,3 +1,7 @@
+2005-08-02  Sam Steingold  <sds@gnu.org>
+
+	* tests.lisp (show): moved here from the individual test files
+
 2005-07-25  Sam Steingold  <sds@gnu.org>
 
 	* tests.lisp (run-all-tests): disable bind-eval because of amd64 issues
